# RaytracingEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  perspective.ppm
Camera/: Camera.cpp  Camera.h  Image.cpp  Image.h  LightIntensity.cpp  LightIntensity.h  Orthographic.cpp  Orthographic.h  Perspective.cpp  Perspective.h  Scene.cpp  Scene.h
Light/: AreaLight.cpp  AreaLight.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  Material.cpp  Material.h  PointLight.cpp  PointLight.h  SoftPointLight.cpp  SoftPointLight.h  SphereLight.cpp  SphereLight.h  SpotLight.cpp  SpotLight.h
Math/: mat3x3.cpp  mat3x3.h  mat4x4.cpp  mat4x4.h  plane.cpp  plane.h  primitive.h  quaternion.cpp  quaternion.h  ray.cpp  ray.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  util.h  vec3.cpp  vec3.h
Utils/: Mesh.cpp  Mesh.h  cursorHider.h  objLoader.h  objectLoader.h  threading.cpp  threading.h
Window/: Window.cpp  Window.h
cmake/: FindGLFW3.cmake
